add comment for configurations for running