@@ -28,3 +28,4 @@ object GUIMain extends JFXApp3 :
 
 
 
+//--module-path "C:\Program Files\Java\javafx-sdk-23.0.2\lib" --add-modules javafx.controls,javafx.fxml
